fix concurrent execution of hot items generation